# Soluna

./: .gitignore  DOCUMENTATION.md  LANGUAGE.md  PROJECTS.md  PURE.md  README.md  TODO.md  args.luna  dune-project  fibonacci.luna  functions.luna  ifelse.luna  list.luna  macros.luna  mutation.luna  prepare_oracle.luna  simple.luna  soluna.opam  string.luna  tco-test.luna  threading.luna  turing.luna  variable.luna
_build/: .db  .digest-db  log
_build/default/: soluna.dune-package  soluna.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: soluna.cma  soluna.cmxa  soluna.cmxs
_build/default/lib/.merlin-conf/: lib-soluna
_build/default/lib/.soluna.objs/byte/: soluna.cmi  soluna.cmo  soluna.cmt
_build/default/lib/.soluna.objs/native/: soluna.cmx
_build/default/test/.merlin-conf/: exe-test_soluna
_build/default/test/.test_soluna.eobjs/byte/: dune__exe__Test_soluna.cmi  (+1 more)
examples/: ISBN.luna  Oracle.luna  _include_child.luna  args.luna  assert.luna  bind.luna  cases.luna  concat.luna  defvar_macro.luna  dict.luna  each.luna  executable_script.luna  explode.luna  fibonacci.luna  fibonacci_cases.luna  files.luna  filter.luna  foobar.luna  for.luna  for_macro.luna  functions.luna  get_set.luna  hashmap.luna  ifelse.luna  include.luna  input.luna  int_str.luna  lazy.luna  length.luna  let.luna  list.luna  macros.luna  match-as-any.luna  match.luna  mutation.luna  my_heroes_raw.txt  not.luna  palindrome_checker.luna  range.luna  reduce.luna  (+10 more)
examples/tests/: general_tests.luna  numerics_tests.luna
lib/: dune
test/: dune
(+4 files in other folders)
